--- a/01-Image-Basics-with-OpenCV/03-Direct-Drawing-with-Mouse.ipynb
+++ b/01-Image-Basics-with-OpenCV/03-Direct-Drawing-with-Mouse.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -33,6 +33,11 @@
    "source": [
     "import cv2\n",
     "import numpy as np\n",
+    "\n",
+    "###################\n",
+    "#####FUNCTIONS#####\n",
+    "###################\n",
+    "\n",
     "# Create a function based on a CV2 Event (Left button click)\n",
     "def draw_circle(event,x,y,flags,param):\n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
@@ -44,6 +49,10 @@
     "cv2.namedWindow(winname='my_drawing')\n",
     "# Connects the mouse button to our callback function\n",
     "cv2.setMouseCallback('my_drawing',draw_circle)\n",
+    "\n",
+    "###################\n",
+    "###SHOWING IMAGE###\n",
+    "###################\n",
     "\n",
     "while True: #Runs forever until we break with Esc key on keyboard\n",
     "    # Shows the image window\n",
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -119,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +142,7 @@
     "\n",
     "# mouse callback function\n",
     "def draw_rectangle(event,x,y,flags,param):\n",
-    "    global ix,iy,drawing,mode\n",
+    "    global ix,iy,drawing\n",
     "\n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
     "        # When you click DOWN with left mouse button drawing is set to True\n",
