--- a/01-Image-Basics-with-OpenCV/04-Image-Basics-Assessment.ipynb
+++ b/01-Image-Basics-with-OpenCV/04-Image-Basics-Assessment.ipynb
@@ -26,17 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cv2"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "img = "
+   ]
   },
   {
    "cell_type": "code",
